--- a/Clean_EEG.ipynb
+++ b/Clean_EEG.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "d233b69b-c695-4406-89df-1b7601e83ceb",
    "metadata": {
     "id": "d233b69b-c695-4406-89df-1b7601e83ceb"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/bin/python3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cca58855",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8a25d7a7-2c38-4892-b283-d3638745893c",
    "metadata": {
     "id": "8a25d7a7-2c38-4892-b283-d3638745893c"
@@ -31,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f14e95d0-0af5-4b74-8860-0d8b574e8f35",
    "metadata": {
     "id": "f14e95d0-0af5-4b74-8860-0d8b574e8f35"
@@ -39,6 +58,8 @@
    "outputs": [],
    "source": [
     "ns = 10\n",
+    "\n",
+    "# data_path = os.path.join(\"A{:02d}T.npz\".format(1))\n",
     "for i in range(1,ns):\n",
     "    data_path = os.path.join(\"A{:02d}T.npz\".format(i))\n",
     "    subject = 'subject{:02d}'.format(i)\n",
@@ -48,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "3ea113f6-16df-4f90-ac95-5e4092dc13ee",
    "metadata": {
     "id": "3ea113f6-16df-4f90-ac95-5e4092dc13ee",
@@ -66,7 +87,7 @@
    ],
    "source": [
     "print(type(subjectData['subject01']))\n",
-    "print(subjectData['subject01'].files)"
+    "print(subjectData['subject01'].files)\n"
    ]
   },
   {
@@ -88,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "c250ce74-4cdc-4e2c-8f60-d3a8afe1b4e6",
    "metadata": {
     "id": "c250ce74-4cdc-4e2c-8f60-d3a8afe1b4e6",
@@ -100,15 +121,15 @@
      "output_type": "stream",
      "text": [
       "Sample\t Electrodes\n",
-      "(672528, 25)\n",
-      "(677169, 25)\n",
-      "(660530, 25)\n",
-      "(600915, 25)\n",
-      "(686120, 25)\n",
-      "(678980, 25)\n",
-      "(681071, 25)\n",
-      "(675270, 25)\n",
-      "(673328, 25)\n"
+      "subject01 (672528, 25)\n",
+      "subject02 (677169, 25)\n",
+      "subject03 (660530, 25)\n",
+      "subject04 (600915, 25)\n",
+      "subject05 (686120, 25)\n",
+      "subject06 (678980, 25)\n",
+      "subject07 (681071, 25)\n",
+      "subject08 (675270, 25)\n",
+      "subject09 (673328, 25)\n"
      ]
     }
    ],
@@ -116,12 +137,12 @@
     "print('Sample\\t Electrodes')\n",
     "for i in range(1,ns):\n",
     "    sub = 'subject{:02d}'.format(i)\n",
-    "    print(subjectData[sub]['s'].shape)"
+    "    print('subject{:02d}'.format(i), subjectData[sub]['s'].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "bf8b0a13-191c-42cb-8bd8-00786ad0229e",
    "metadata": {
     "id": "bf8b0a13-191c-42cb-8bd8-00786ad0229e"
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "c43fe0de-6150-433a-8ac6-2be322538d9a",
    "metadata": {
     "id": "c43fe0de-6150-433a-8ac6-2be322538d9a"
@@ -157,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "5d094de2-95d8-4484-a300-d3ddc3fdc91a",
    "metadata": {
     "id": "5d094de2-95d8-4484-a300-d3ddc3fdc91a",
@@ -168,15 +189,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(25, 672528)\n",
-      "(25, 677169)\n",
-      "(25, 660530)\n",
-      "(25, 600915)\n",
-      "(25, 686120)\n",
-      "(25, 678980)\n",
-      "(25, 681071)\n",
-      "(25, 675270)\n",
-      "(25, 673328)\n"
+      "subject01 (25, 672528)\n",
+      "subject02 (25, 677169)\n",
+      "subject03 (25, 660530)\n",
+      "subject04 (25, 600915)\n",
+      "subject05 (25, 686120)\n",
+      "subject06 (25, 678980)\n",
+      "subject07 (25, 681071)\n",
+      "subject08 (25, 675270)\n",
+      "subject09 (25, 673328)\n"
      ]
     }
    ],
@@ -187,12 +208,12 @@
     "    sub = 'subject{:02d}'.format(i)\n",
     "    rawData[sub] = subjectData[sub]['s'].T\n",
     "\n",
-    "    print(rawData[sub].shape)"
+    "    print('subject{:02d}'.format(i), rawData[sub].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "6009d47c-36c4-41be-8c55-9d5f96ae44a1",
    "metadata": {
     "id": "6009d47c-36c4-41be-8c55-9d5f96ae44a1",
@@ -245,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "aaa12bd3-b4e8-4a05-8d81-8f56d9a049c1",
    "metadata": {
     "id": "aaa12bd3-b4e8-4a05-8d81-8f56d9a049c1"
@@ -268,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "bdd36bcb-b91f-4c71-aa2e-b09cf936a482",
    "metadata": {
     "id": "bdd36bcb-b91f-4c71-aa2e-b09cf936a482",
@@ -278,24 +299,25 @@
     {
      "data": {
       "text/plain": [
-       "array([ 98242, 100250, 112163, 114058, 116030, 124069, 126135, 130237,\n",
-       "       140283, 154531, 168776, 186876, 189204, 191207, 197085, 201113,\n",
-       "       208998, 214809, 229142, 239079, 245162, 251366, 261676, 283711,\n",
-       "       289960, 297948, 299998, 313611, 321841, 333953, 346094, 348201,\n",
-       "       354427, 364371, 376373, 380546, 384877, 386795, 398764, 402668,\n",
-       "       404563, 430788, 442929, 447128, 451262, 455346, 459281, 469374,\n",
-       "       481712, 489701, 491618, 505314, 529584, 537693, 541871, 546054,\n",
-       "       548097, 550161, 552181, 572157, 576544, 600205, 622505, 626419,\n",
-       "       632502, 636599, 642889, 646996, 654876, 663044, 666878, 671051])"
+       "array([ 96290, 102361, 108259, 119941, 122061, 132307, 146352, 152424,\n",
+       "       156623, 172782, 176750, 182703, 195077, 205094, 218896, 233134,\n",
+       "       237118, 243187, 259656, 263648, 267536, 273585, 275704, 277610,\n",
+       "       286039, 303927, 311644, 317739, 328057, 335914, 338018, 344023,\n",
+       "       352384, 358511, 360483, 378487, 382874, 392866, 406535, 412566,\n",
+       "       424892, 426804, 432749, 434853, 436857, 461206, 471280, 475322,\n",
+       "       485582, 497597, 501398, 503370, 507281, 513475, 515511, 517577,\n",
+       "       519647, 531688, 535667, 560122, 580465, 594432, 602149, 604116,\n",
+       "       606236, 610310, 618562, 638706, 640798, 658935, 660925, 668992],\n",
+       "      dtype=int32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "left"
+    "right"
    ]
   },
   {
@@ -316,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "322f17f5-365b-4179-9987-2a08cfa5954f",
    "metadata": {
     "id": "322f17f5-365b-4179-9987-2a08cfa5954f"
@@ -949,6 +971,14 @@
     "print(len(subjectData['subject02']['edur']))\n",
     "print((subjectData['subject02']['etyp']))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa6f2052",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -956,7 +986,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -970,7 +1000,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
